[package]
name = "cargo-chrono"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/nikomatsakis/cargo-chrono"
documentation = "https://docs.rs/cargo-chrono/"
description = "Cargo tool to benchmark multiple commits and generate plots of the results"

[dependencies]
docopt = "0.6.82"
git2 = "0.4.4"
regex = "0.1.73"
rustc-serialize = "0.3.19"
log = "0.3"
env_logger = "0.3"
csv = "0.14.7"
error-chain = "0.7.1"
lazy_static = "0.2.2"
chrono = "0.2.25"
gnuplot = "0.0.21"