[package]
name = "cargo-chrono"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/nikomatsakis/cargo-chrono"
documentation = "https://docs.rs/cargo-chrono/"
description = "Cargo tool to benchmark multiple commits and generate plots of the results"

[dependencies]
docopt = "0.8"
git2 = "0.6"
regex = "0.2"
rustc-serialize = "0.3.19"
log = "0.3"
env_logger = "0.4"
csv = "0.15"
error-chain = "0.10"
lazy_static = "0.2.2"
chrono = "0.4"
gnuplot = "0.0.22"
pbr = "1.0.0"
glob = "0.2.11"
serde = "1.0"
serde_derive = "1.0"
