[package]
name = "cargo-chrono"
version = "0.2.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/nikomatsakis/cargo-chrono"
documentation = "https://docs.rs/cargo-chrono/"
description = "Cargo tool to benchmark multiple commits and generate plots of the results"

[dependencies]
docopt = "1.1.0"
git2 = { version = "0.13.5", default-features = false }
regex = "1.3.7"
rustc-serialize = "0.3.19"
log = "0.4.8"
env_logger = "0.7.1"
csv = "0.15"
error-chain = "0.12.2"
lazy_static = "1.4.0"
chrono = "0.4"
gnuplot = "0.0.22"
pbr = "1.0.0"
glob = "0.3"
serde = "1.0"
serde_derive = "1.0"
